--- a/yukon-client/yukon-web/WebContent/include/PurpleStyles.css
+++ b/yukon-client/yukon-web/WebContent/include/PurpleStyles.css
@@ -13,7 +13,7 @@
 .standardcentralwhitebody
 {
 	position: relative;
-	width: 657px;
+	width: 660px;
 	height: 450px;
 	background-color: white;
 	border: black 1px solid;
